# kinect_utilities

./: .gitignore  CMakeLists.txt  LICENSE
include/: icp_wrapper.hpp  kinect.hpp
src/: main.cpp
udev/: kinectv2.rules
